add intercept endpoint
