# wazo_calld_queue/plugin.py
@@ -8,6 +8,7 @@ from wazo_confd_client import Client as ConfdClient
 from wazo_agentd_client import Client as AgentdClient
 
 from .resources import (
+    InterceptResource,
     QueuesResource,
     QueueResource,
     QueueAddMemberResource,
@@ -24,6 +25,7 @@ class Plugin(object):
 
     def load(self, dependencies):
         api = dependencies['api']
+        ari = dependencies['ari']
         config = dependencies['config']
         token_changed_subscribe = dependencies['token_changed_subscribe']
         bus_consumer = dependencies['bus_consumer']
@@ -46,7 +48,7 @@ class Plugin(object):
         queues_bus_event_handler = QueuesBusEventHandler(bus_publisher, confd_client, agentd_client, MY_TENANT)
         queues_bus_event_handler.subscribe(bus_consumer)
 
-        queues_service = QueueService(amid_client, confd_client, agentd_client, queues_bus_event_handler)
+        queues_service = QueueService(amid_client, confd_client, ari.client, agentd_client, queues_bus_event_handler)
 
         api.add_resource(QueuesResource, '/queues', resource_class_args=[queues_service])
         api.add_resource(QueueResource, '/queues/<queue_name>', resource_class_args=[queues_service])
@@ -55,3 +57,4 @@ class Plugin(object):
         api.add_resource(QueuePauseMemberResource, '/queues/<queue_name>/pause_member', resource_class_args=[queues_service])
         api.add_resource(QueueLiveStatsResource, '/queues/<queue_name>/livestats', resource_class_args=[queues_service])
         api.add_resource(QueueAgentsStatusResource, '/queues/agents_status', resource_class_args=[queues_service])
+        api.add_resource(InterceptResource, '/queues/intercept/<queue_name>', resource_class_args=[queues_service])
